--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/ProGM user/ProGMClient/.vs/ProGMClient/v16
+/ProGMClient/.vs/ProGMClient
